# krea-explorations

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: concept_directions.md  findings.md  krea2_inference.md  krea2_vae.md  turbo_lora_strength.md  two_sampler_split.md
docs/data/: README.md  attn_anime_b0_mean.npy  attn_anime_b1_mean.npy  attn_block0_mean.npy  attn_block1_mean.npy  attn_p0_b0_mean.npy  (+17 more)
example_workflows/: README.md  krea2_concept_inject.json  krea2_diversity_distillation_rab.json  krea2_turbo_ab_projedit.json  krea2_turbo_ab_stock.json  krea2_turbo_solo_explorer.json  krea2_turbo_t2i.json
examples/: concept_directions.json
scripts/: canonical_workflows.py  causal_attribute_test.py  concept_direction.py  extract_attention.py  generate.py  krea2_clip.py  projector_contribution.py  stock_vs_rebalanced.py  untwist_style.py  workflow_dump.py
tests/: test_attention_stats.py  test_attn_bias.py  test_build_graph.py  test_canonical_workflows.py  test_cli.py  test_comfy_nodes.py  test_concept_direction.py  test_concept_inject.py  test_contrast_directions.py  test_dit_capture.py  test_divdist_graph.py  test_diversity.py  test_generate_run.py  test_image_grid.py  test_keep_system.py  test_krea2_untwist_attn.py  test_model_patches.py  test_no_reinlined_graphs.py  test_projector.py  test_projector_lora.py  test_random_lora.py  test_residual_steer.py  test_resolution.py  test_rope_untwist.py  test_safetensors_patch.py  test_sage_node.py  test_split_graph.py  test_workflow_dump.py
(+29 files in other folders)
